# django-api-boilerplate

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
api/api/: settings.py  urls.py
api/core/: admin.py  models.py  serializers.py
api/core/management/commands/: wait_for_db.py
api/core/migrations/: 0001_initial.py
api/core/tests/: test_admin.py  test_commands.py  test_models.py
