[tool.poetry]
name = "ttt-api"
version = "0.1.0"
description = ""
authors = ["Ozgur Tanriverdi <ozgur.tanriverdi94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
pylint = "^2.7.4"
pylint-django = "^2.4.2"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.8.6"
djoser = "^2.1.0"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
